--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:400,400i,500,700" rel="stylesheet">
-  <link href="https://unpkg.com/material-dashboard@2.1.0/assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:400,400i,500,700" as="style" onload="this.rel='stylesheet'">
+  <link href="{{ url_for('static', filename='material-dashboard-2.1.0/material-dashboard.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='select2-4.0.6-rc.0/select2.min.css') }}" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
@@ -21,14 +21,14 @@
       {% block content %}{% endblock %}
     </main>
   {% endblock %}
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/material-dashboard@2.1.0/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="https://unpkg.com/material-dashboard@2.1.0/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <script src="https://unpkg.com/material-dashboard@2.1.0/assets/js/plugins/chartist.min.js"></script>
-  <script src="https://unpkg.com/material-dashboard@2.1.0/assets/js/plugins/bootstrap-notify.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+  <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='popper-1.14.3-min.js') }}"></script>
+  <script src="{{ url_for('static', filename='bootstrap-4.1.1.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='material-dashboard-2.1.0/bootstrap-material-design.min.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='material-dashboard-2.1.0/perfect-scrollbar.jquery.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='material-dashboard-2.1.0/chartist.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='material-dashboard-2.1.0/bootstrap-notify.js') }}"></script>
+  <script src="{{ url_for('static', filename='select2-4.0.6-rc.0/select2.min.js') }}"></script>
   <script type="text/javascript">
     $(document).ready(function() {
       $(".select2").select2({ width: 'element' });
