--- a/matcher/templates/nav.html
+++ b/matcher/templates/nav.html
@@ -25,6 +25,7 @@
     <ul class="navbar-nav mr-auto">
       {{ menu_item("Home", "dashboard.home") }}
       {{ menu_item("Platforms", "dashboard.platform_list") }}
+      {{ menu_item("Providers", "dashboard.provider_list") }}
       {{ menu_item("Scraps", "dashboard.scrap_list") }}
       {{ menu_item("Objects", "dashboard.object_list") }}
       {{ menu_item("Exports", "dashboard.exports") }}
