feat: Provider edit

--- a/matcher/dashboard/templates/providers/list.html
+++ b/matcher/dashboard/templates/providers/list.html
@@ -13,6 +13,7 @@
 
         {{ m.render_form(filter_form, class_="card-body", action="GET") }}
       </div>
+      <a href="{{ url_for(".new_provider") }}" class="btn btn-block btn-info">New provider</a>
     </div>
     <div class="col-12 col-md">
       <div class="card">
