--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:400,400i,500,700" as="style" onload="this.rel='stylesheet'">
+  <link href="{{ url_for('static', filename='fonts/font.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='material-dashboard-2.1.0/material-dashboard.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='select2-4.0.6-rc.0/select2.min.css') }}" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
