--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -31,7 +31,7 @@
   <script src="{{ url_for('static', filename='select2-4.0.6-rc.0/select2.min.js') }}"></script>
   <script type="text/javascript">
     $(document).ready(function() {
-      $(".select2").select2({ width: 'element' });
+      $(".select2").select2({ width: '100%' });
     });
 
     var flashes = {{ get_flashed_messages() | tojson }};
