fixup: not a function call

--- a/matcher/dashboard/templates/imports/show.html
+++ b/matcher/dashboard/templates/imports/show.html
@@ -27,7 +27,7 @@
             </dd>
 
             <dt>Effective date</dt>
-            <dd>{{ file.effective_date() }}</dd>
+            <dd>{{ file.effective_date }}</dd>
 
             <dt>Line count</dt>
             <dd>{{ file.get_line_count() }}</dd>
