--- a/matcher/dashboard/templates/imports/show.html
+++ b/matcher/dashboard/templates/imports/show.html
@@ -26,6 +26,9 @@
               {% endif %}
             </dd>
 
+            <dt>Effective date</dt>
+            <dd>{{ file.effective_date }}</dd>
+
             <dt>Line count</dt>
             <dd>{{ file.get_line_count() }}</dd>
 
