--- a/matcher/dashboard/templates/imports/show.html
+++ b/matcher/dashboard/templates/imports/show.html
@@ -37,16 +37,16 @@
 
           </dl>
         </div>
-        <div class="d-flex justify-content-between">
-          {% if file.is_done %}
-            <a class="btn btn-primary" href="{{ url_for('.download_import_file', id=file.id) }}">
-              <i class="material-icons">get_app</i>
-              Download
-            </a>
-          {% endif %}
-        </div>
         <div class="card-footer">
-          <a href="{{ url_for('.object_list', import_file=file.id) }}" class="btn btn-secondary">Show imported objects <i class="material-icons">arrow_forward</i></a>
+          <div class="button-container">
+            {% if file.is_done %}
+              <a class="btn btn-primary" href="{{ url_for('.download_import_file', id=file.id) }}">
+                <i class="material-icons">get_app</i>
+                Download
+              </a>
+            {% endif %}
+            <a href="{{ url_for('.object_list', import_file=file.id) }}" class="btn btn-secondary">Show imported objects <i class="material-icons">arrow_forward</i></a>
+          </div>
         </div>
       </div>
     </div>
