views: refactor presence details list

--- a/matcher/dashboard/templates/objects/show.html
+++ b/matcher/dashboard/templates/objects/show.html
@@ -175,47 +175,33 @@
               </tr>
             <tbody>
               {% for link in object.links | sort(attribute='platform.name') %}
-                {% for file in link.imports %}
-                  <tr>
-                    <td>
-                      <a href="{{ url_for('.show_platform', slug=link.platform.slug) }}">
-                        {{ link.platform.name }}
-                      </a>
-                    </td>
-                    <td class="td-actions">
-                      <span class="text-monospace">
-                        {{ link.external_id }}
-                      </span>
-                      {% if link.url %}
-                        <a href="{{ link.url }}" class="btn btn-sm btn-link">
-                          <i class="material-icons">arrow_forward</i>
+                {% for origins in (link.imports, link.scraps) %}
+                  {% for origin in origins %}
+                    <tr>
+                      <td>
+                        <a href="{{ url_for('.show_platform', slug=link.platform.slug) }}">
+                          {{ link.platform.name }}
                         </a>
+                      </td>
+                      <td class="td-actions">
+                        <span class="text-monospace">
+                          {{ link.external_id }}
+                        </span>
+                        {% if link.url %}
+                          <a href="{{ link.url }}" class="btn btn-sm btn-link">
+                            <i class="material-icons">arrow_forward</i>
+                          </a>
+                        {% endif %}
+                      </td>
+                      {% if origin|is_import_file %}
+                        <td><a href="{{ url_for(".show_import_file", id=origin.id) }}">Import #{{ origin.id }}</a></td>
+                        <td>{{ origin.last_activity | relative_date }}</td>
+                      {% else %}
+                        <td><a href="{{ url_for(".show_scrap", id=origin.id) }}">Scrap #{{ origin.id }}</a></td>
+                        <td>{{ origin.date | relative_date }}</td>
                       {% endif %}
-                    </td>
-                    <td><a href="{{ url_for(".show_import_file", id=file.id) }}">Import #{{ file.id }}</a></td>
-                    <td>{{ file.last_activity | relative_date }}</td>
-                  </tr>
-                {% endfor %}
-                {% for scrap in link.scraps %}
-                  <tr>
-                    <td>
-                      <a href="{{ url_for('.show_platform', slug=link.platform.slug) }}">
-                        {{ link.platform.name }}
-                      </a>
-                    </td>
-                    <td class="td-actions">
-                      <span class="text-monospace">
-                        {{ link.external_id }}
-                      </span>
-                      {% if link.url %}
-                        <a href="{{ link.url }}" class="btn btn-sm btn-link">
-                          <i class="material-icons">arrow_forward</i>
-                        </a>
-                      {% endif %}
-                    </td>
-                    <td><a href="{{ url_for(".show_scrap", id=scrap.id) }}">Scrap #{{ scrap.id }}</a></td>
-                    <td>{{ scrap.date | relative_date }}</td>
-                  </tr>
+                    </tr>
+                  {% endfor %}
                 {% endfor %}
               {% endfor %}
             </tbody>
